Overflow bug fix

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
 	line-height: 1.5em !important;
 	}
 	
+	html{
+	overflow-x: hidden;
+	}
+	
 	.sectionStyle{
 		padding-top: 1.5em;
 		background: #557489;
